--- a/views/store.html
+++ b/views/store.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/header.css" type="text/css" />
+    <link rel="stylesheet" href="css/store.css" type="text/css" />
     <script
       src="https://kit.fontawesome.com/ef09da54b9.js"
       crossorigin="anonymous"
@@ -29,6 +30,538 @@
     <script src="js/navigation.js"></script>
     <script src="js/navigation.js"></script>
     <a href="/items">Go to items</a>
+
+
+  <div>
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P01.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P02.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P03.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P04.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P05.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P06.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P07.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P08.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P09.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P10.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P11.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P12.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P13.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P14.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P15.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P16.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P17.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P18.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P19.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P20.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P21.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P22.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P23.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P24.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P25.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P26.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P27.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P28.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P29.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P30.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P31.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P32.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P33.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P34.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P35.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P36.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P37.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P38.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P39.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P40.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P41.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P42.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P43.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P44.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P45.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P46.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P47.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P48.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P49.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P50.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P51.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P52.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P53.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P54.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P55.jpg" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P56.jpg" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+    <div class="4-products">
+
+      <div class="product">
+        <img src="P57.jpg" alt="product-image">
+          <h4>Aloe Vera Gel (ရှားစောင်းလက်ပတ်အနှစ်/ရှားစောင်းဝါ)</h4>
+          <p>............</p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="P58.jpg" alt="product-image">
+          <h4>Forever B12 Plus (သွေးအားကောင်း)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="#" alt="product-image">
+          <h4>Summer's eve Feminine Douche (သားအိမ်ဆေးတန်)</h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+
+      <div class="product">
+        <img src="#" alt="product-image">
+          <h4>Forever Aloe Vera Gelly (အစုံလိမ်းဆေး) </h4>
+          <p></p>
+          <a href="#"><button></button></a>
+      </div>
+
+    </div>
+
+
+  </div>
+
+
     <div class="footerclass">
       <footer>
         <div class="footer1">
