--- a/views/contactus.html
+++ b/views/contactus.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/header.css" type="text/css" />
     <link rel="stylesheet" href="css/mobile_view/contact_mobile.css" />
     <link rel="stylesheet" href="css/contact.css" />
+    <link rel="stylesheet" href="css/aboutus.css" />
+    <link rel="stylesheet" href="css/mobile_view/aboutus_mobile.css" />
     <script
       src="https://kit.fontawesome.com/ef09da54b9.js"
       crossorigin="anonymous"
@@ -123,6 +125,45 @@
         ></textarea>
         <button type="submit">Send</button>
       </form>
+    </section>
+
+    <section class="aboutus">
+      <div class="upper">
+        <h1>
+          Daw Thet Htar <br />
+          & <br />Daw Aye Thi Da Win
+        </h1>
+        <div class="containerimg">
+          <img src="imgs/dtt&me.png" alt="" />
+        </div>
+      </div>
+      <div class="under">
+        <div class="leftabout">
+          <h2>Follow Us On</h2>
+          <div class="sub_left1">
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href="" style="background-color: green"
+              ><i class="fa-brands fa-facebook-messenger"></i
+            ></a>
+            <a href=""><i class="fa-solid fa-envelope"></i></a>
+            <a href=""><i class="fa-solid fa-phone"></i></a>
+          </div>
+        </div>
+        <div class="rightabout">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati
+            autem aspernatur illum ex quas ipsa fugit, qui, necessitatibus magni
+            distinctio beatae similique ab nesciunt excepturi? Unde impedit
+            beatae officiis eos.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            tempora non dolor obcaecati, perspiciatis culpa quo, totam impedit
+            itaque ut laudantium? Molestias optio mollitia aperiam ea doloremque
+            hic perferendis aut.
+          </p>
+        </div>
+      </div>
     </section>
 
     <div class="footerclass">
