--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -7,6 +7,7 @@
 }
 
 .left {
+  position: relative;
   width: 30%;
   height: 100%;
   float: left;
@@ -16,13 +17,16 @@
   background-color: rgba(255, 255, 255, 0.5);
 }
 .left h1 {
-  margin-bottom: 55%;
+  position: absolute;
+  top: 50%;
   width: 100%;
   text-align: center;
   font-size: 3em;
 }
 .sub_left {
-  height: 20%;
+  position: absolute;
+  bottom: 0;
+  height: 24%;
   width: 100%;
 }
 .sub_left h2 {
