--- a/views/delivery.html
+++ b/views/delivery.html
@@ -72,7 +72,7 @@
           </table>
         </div>
         <button class="btn">
-          Yangon <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+          Bago <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
         </button>
         <div class="content">
           <table>
@@ -91,7 +91,7 @@
           </table>
         </div>
         <button class="btn">
-          Yangon <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+          Mandalay <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
         </button>
         <div class="content">
           <table>
