--- a/views/delivery.html
+++ b/views/delivery.html
@@ -51,7 +51,9 @@
       </div>
       <hr />
       <div class="search">
+        
         <h1>Choose your region</h1>
+
         <button class="btn">
           Yangon <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
         </button>
@@ -109,6 +111,227 @@
             </tr>
           </table>
         </div>
+
+        <button class="btn">
+          Ayeyawady <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+
+        <button class="btn">
+          Kachin <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+
+        <button class="btn">
+          Yakhine <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+
+        <button class="btn">
+          Kayah <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+
+        <button class="btn">
+          Kayin <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+        <button class="btn">
+          Chin <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+
+        <button class="btn">
+          Shan <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+
+        <button class="btn">
+          Tanintharyi <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+
+        <button class="btn">
+          Magway <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+
+        <button class="btn">
+          Mon <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+
+        <button class="btn">
+          Sagaing <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+
+
       </div>
     </section>
     <script src="js/delivery.js"></script>
