--- a/public/css/store.css
+++ b/public/css/store.css
@@ -1,11 +1,20 @@
+section {
+  position: relative;
+  width: 100%;
+  height: auto;
+  background-color: red;
+  padding-bottom: 60px;
+}
 .products4 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   padding: 5%;
+  width: 73%;
+  float: right;
 }
 .product {
-  flex: 20%;
+  flex: 23%;
   overflow: hidden;
   background: white;
   color: black;
@@ -18,7 +27,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 1.2rem;
-  margin: 2rem;
+  margin: 0.5vh;
   border: black 2px solid;
 }
 .product img {
@@ -30,4 +39,57 @@
 }
 .product:hover {
   box-shadow: 5px 15px 23px aqua;
+}
+
+.categories {
+  position: fixed;
+  top: 15vh;
+  bottom: 0;
+  left: 0;
+  width: 27%;
+  height: auto;
+  background-color: white;
+}
+.sort {
+  height: 30%;
+  width: 100%;
+  padding: 5vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  border-bottom: 5px solid black;
+  > h1 {
+    font-size: 3em;
+    margin: 0 0 10px 0;
+    > i {
+      float: right;
+    }
+  }
+  > p {
+    color: gray;
+  }
+}
+
+.subcate {
+  height: 70%;
+  width: 100%;
+  padding: 5vh;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(233, 230, 231);
+  > h2 {
+    font-size: 2em;
+  }
+  > .buttons {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 5px;
+    height: 90%;
+    > button {
+      height: 7vh;
+      font-size: 1.2em;
+    }
+  }
 }
