--- a/views/contactus.html
+++ b/views/contactus.html
@@ -34,14 +34,16 @@
     </header>
     <script src="js/navigation.js"></script>
 
+
+
     <section class="aboutus">
       <div class="upper">
         <div class="containerimg">
           <h1>
             Daw Thet Htar <br />
-            & <br />Daw Aye Thi Da Win
+            & <br />Daw Aye Myint
           </h1>
-          <img src="imgs/dtt&me.png" alt="" />
+          <img src="imgs/dtt&me.png" alt="DawThetHtar&DawAyeMyint"/>
         </div>
       </div>
       <div class="under">
@@ -166,6 +168,8 @@
       </form>
     </section>
 
+
+    
     <div class="footerclass">
       <footer>
         <div class="footer1">
