--- a/public/css/delivery.css
+++ b/public/css/delivery.css
@@ -28,7 +28,7 @@
 .mainsection hr {
   width: 60%;
   margin: 4vh;
-  border: 3px dotted black;
+  border: 3px dotted blue;
   margin-left: 20%;
 }
 
@@ -44,7 +44,13 @@
   padding: 1vh;
   margin: 1vh;
   background-color: rgba(5, 255, 180, 0.4);
-  border: 3px solid rgba(255, 0, 72, 0.296);
+  border: 2px solid rgb(0, 0, 85);
+  border-radius: 11px;
+}
+.cities input:hover{
+  background-color: rgba(148, 105, 255, 0.296);
+  border: 2.5px solid black;
+  font-size: 1.3em;
 }
 
 .search {
@@ -54,7 +60,7 @@
   padding: 1vh;
   border: 5px black solid;
   border-radius: 25px;
-  background-color: rgba(0, 195, 255, 0.296);
+  background-color: rgba(148, 105, 255, 0.296);
   
 }
 .search h1 {
