--- a/public/css/header.css
+++ b/public/css/header.css
@@ -10,11 +10,11 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 body {
-  background-image: url("../imgs/sample69.png");
+  background-image: url("../imgs/691.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: 200vh 100%;
+  background-size: 220vh 100%;
   /*TODO - fix background img size*/
 }
 
